--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,9 +7,9 @@
 <% end %>
 
 <%= form_for @user do |f| %>
-  <%= f.label :username %>
+  <%= f.label :Username %>
   <%= f.text_field :username %> <br/>
-  <%= f.label :password %>
+  <%= f.label :Password %>
   <%= f.password_field :password %><br/>
   <%= f.submit "Create account!" %>
 <% end %>
