--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,14 +1,12 @@
 <h1> Welcome to Animenyusu the preffered source for all news and updates regarding your favorite Anime </h1>
 <h2>Please Login to your account or Sign up for access </h2>
 
-<% if @error %>
-   p <%= @error%>
-<% end %>
 
-<%= form_tag "/login_form" do %>
-    <%= label_tag :username %>
-    <%= text_field_tag :username %>
-    <%= label_tag :password %>
-    <%= text_field_tag :password %>
-    <%= submit_tag 'Login' %>
-    <% end %>
+# <%= form_tag "/login_form" do %>
+#     <%= label_tag :username %>
+#     <%= text_field_tag :username %>
+#     <%= label_tag :password %>
+#     <%= text_field_tag :password %>
+#     <%= submit_tag 'Login' %>
+#     <% end %>
+    
