--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1> create an account to access the wonderful world of anime </h1>
+<h1> Create an account to access the wonderful world of anime </h1>
 
 <% if @errors %>
   <% @errors.each do |error|%>
@@ -8,8 +8,8 @@
 
 <%= form_for @user do |f| %>
   <%= f.label :Username %>
-  <%= f.text_field :username %> <br/>
+  <%= f.text_field :username %> <br>
   <%= f.label :Password %>
-  <%= f.password_field :password %><br/>
+  <%= f.password_field :password %><br>
   <%= f.submit "Create account!" %>
 <% end %>
