--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
-<h1> Browse through the list of Users to meet some new anime Nakama</h1>
+<h1> Browse through the list of Users to meet some new Nakama</h1>
 <ul>
-    <% @user.map do |user_var|%>
+    <% @users.map do |user_var|%>
         <li> <%= link_to user_var.username, user_path(user_var.id) %> </li>
     <%end%>
 
