--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,10 +1,18 @@
 <h1> Make a Post </h1>
 
-<%= form_for @post do |post_var| %>
-    <%= post_var.label :title %>
-    <%= post_var.text_field :title %>
-    <%= post_var.label :content %>
-    <%= post_var.text_field :content %>
+<%= form_for @post do |p| %>
+    <%= p.label :title %>
+    <%= p.text_field :title %>
+
+    <%= p.label :content %>
+    <%= p.text_field :content %>
+
+    <%= p.label :tag_id
+    <%= p.collection_select :tag_id, @tag, :id, :genre%>
+
+    <%= p.label :anime_id %>
+    <%= p.collection_select :anime_id, @anime, :id, :AnimeOptions %>
+
     
-    <%= post_var.submit "Share your post!" %>
+    <%= p.submit "Share your post!" %>
 <% end %>
