--- a/app/assets/stylesheets/animes.scss
+++ b/app/assets/stylesheets/animes.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Animes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+#banner{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+}
+body {
+    background: rgb(2,0,36);
+    background: linear-gradient(142deg, rgba(2,0,36,1) 0%, rgba(191,22,172,0.31556372549019607) 76%);
+    }
+h1{color:black;}
+h2{font-style: italic}
