--- a/app/views/animes/index.html.erb
+++ b/app/views/animes/index.html.erb
@@ -6,6 +6,9 @@
 </head>
 <body>
     <header>
+        <div id="banner">
+            <img src="https://image.myanimelist.net/ui/5LYzTBVoS196gvYvw3zjwL_nk71Z0lmepi0f51OM5CE" alt="Anime Banner" title="Animenyusu Banner">
+        </div>
         <h1> Browse all your favourite Anime on one page! </h1>
     </header>
     <table>
