incorporated ./layouts/app... into view CSS

--- a/app/assets/stylesheets/animes.scss
+++ b/app/assets/stylesheets/animes.scss
@@ -1,6 +1,15 @@
 // Place all the styles related to the Animes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+#header{
+    display: block;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50;
+}
+
 #banner{
     display: block;
     margin-left: auto;
