--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,13 @@
   <header>
   <div class='nav'> 
     <span><h1>Anime new, Anime used, Anime news </h1></span>
-  </div>
-  <div>
+
     <p><%= link_to 'Anime land', animes_path %>
     <%= link_to 'User Home', users_path %>
     <%= link_to 'add to favourite', liked_animes_path %>
     <%= link_to 'Make a new Post', posts_path %></p>
+  </div>
+  <div
 
   </div>
   <div id="banner">
