--- a/app/assets/stylesheets/animes.scss
+++ b/app/assets/stylesheets/animes.scss
@@ -2,13 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-#header{
-    display: block;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50;
-}
+    
+
+.nav{
+    text-align: center;
+    }
 
 #banner{
     display: block;
