--- a/app/views/animes/index.html.erb
+++ b/app/views/animes/index.html.erb
@@ -9,14 +9,15 @@
     <table>
         <tr>
             <% @anime.map do |series|%>
-                <td> <%= link_to series.name, anime_path(series.id) %> </td>
-            <%end%>
-        </tr>
-        <tr>
+                <tr><td> <%= link_to series.name, anime_path(series.id) %> </td>
+                <td> <%= link_to series.description, anime_path(series.id) %> </td>
+                </tr><%end%>
+        
+        <!-- <tr>
                 <% @anime.map do |series|%>
-                    <td> <%= link_to series.description, anime_path(series.id) %> </td>
+                    <td> <%= link_to series.description, anime_path(series.id)%>< </td>
                 <%end%>
-        </tr>
+        </tr> -->
     </table>
 </body>
 </html>
