fixed typo in view/post/new

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,7 +7,7 @@
     <%= p.label :content %>
     <%= p.text_field :content %>
 
-    <%= p.label :tag_id
+    <%= p.label :tag_id %>
     <%= p.collection_select :tag_id, @tag, :id, :genre%>
 
     <%= p.label :anime_id %>
