--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -11,7 +11,7 @@
     <%= p.collection_select :tag_id, @tag, :id, :genre%>
 
     <%= p.label :anime_id %>
-    <%= p.collection_select :anime_id, @anime, :id, :AnimeOptions %>
+    <%= p.collection_select :anime_id, @anime, :id, :discription %>
 
     
     <%= p.submit "Share your post!" %>
