--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <p><%= link_to 'Anime land', animes_path %>
     <%= link_to 'User Home', users_path %>
     <%= link_to 'add to favourite', liked_animes_path %>
-    <%= link_to 'Make a new Post', posts_path %></p>
+    <%= link_to 'Make a new Post', new_post_path %></p>
   </div>
   <div
 
